--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   fpm_php5.6:
-    image: php:5.6.33-fpm
+    image: php:5.6.latest-fpm
     volumes:
       - ./php5.6/etc:/usr/local/etc
       - ./php5.6/no-debug-non-zts-20131226:/usr/local/lib/php/extensions/no-debug-non-zts-20131226
@@ -9,18 +9,25 @@ services:
       - ./www:/var/www/html
 
   fpm_php7.2:
-    image: php:7.2-fpm
+    image: php:7.2.latest-fpm
     volumes:
       - ./php7.2/etc:/usr/local/etc
       - ./php7.2/no-debug-non-zts-20170718:/usr/local/lib/php/extensions/no-debug-non-zts-20170718
       - ./sharefolder:/tmp/sharefolder
       - ./www:/var/www/html
 
+  mysql5.7:
+    image: mysql:5.7.22
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: 123456
+
   nginx:
     image: nginx:latest
     links:
       - fpm_php5.6:fpm_php5.6
       - fpm_php7.2:fpm_php7.2
+      - mysql5.7:mysql5.7
     volumes:
       - ./etc_nginx:/etc/nginx
       - ./sharefolder:/tmp/sharefolder
