--- a/DockerfilePHP7.2Fpm/Dockerfile
+++ b/DockerfilePHP7.2Fpm/Dockerfile
@@ -1,8 +1,10 @@
 FROM php:7.2-fpm
+ENV TZ=Asia/Shanghai
 COPY sources.list /etc/apt/sources.list
 RUN apt-get update \
 	&& apt-get install -y vim git curl zip \
 	&& curl -sS https://getcomposer.org/installer | php \
 	&& mv composer.phar /usr/local/bin/composer \
 	&& composer config -g repo.packagist composer https://packagist.phpcomposer.com \
+	&& ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone \
 	&& rm -rf /var/lib/apt/lists/*
