--- a/DockerfilePHP5.6Fpm/Dockerfile
+++ b/DockerfilePHP5.6Fpm/Dockerfile
@@ -6,5 +6,6 @@ RUN apt-get update \
 	&& curl -sS https://getcomposer.org/installer | php \
 	&& mv composer.phar /usr/local/bin/composer \
 	&& composer config -g repo.packagist composer https://packagist.phpcomposer.com \
+    && docker-php-ext-install pdo pdo_mysql bcmath \
     && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone \
 	&& rm -rf /var/lib/apt/lists/*
