--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     volumes:
       - ./sharefolder:/tmp/sharefolder
       - ./etc_mysql:/etc/mysql
-      - ./mysql_data:/var/lib/mysql
+      - ./mysql_data:/var/lib/mysql # 当报错的时候，可以把这行删了，这个是做的数据库数据的映射
     ports:
       - 3306:3306
 
