--- a/etc_nginx/conf.d/test.conf
+++ b/etc_nginx/conf.d/test.conf
@@ -1,9 +1,12 @@
 server {
     listen       80;
-    server_name  testkoala.com;
-
-    root /var/www/html/koala/public;
+    server_name  admin.leliapp.com;
+    root /var/www/html/leliapp/leliapp_admin/public;
     index  index.html index.php;
+
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     error_page  404              /404.html;
     # redirect server error pages to the static page /50x.html
@@ -35,4 +38,45 @@ server {
     location ~ /\.ht {
         deny  all;
     }
+}
+server {
+    listen       80;
+    server_name  localhost;
+
+    #charset koi8-r;
+    #access_log  /var/log/nginx/host.access.log  main;
+
+    root /var/www/html/test/public;
+    index  index.html index.php;
+
+    #error_page  404              /404.html;
+
+    # redirect server error pages to the static page /50x.html
+    #
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+
+    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
+    #
+    #location ~ \.php$ {
+    #    proxy_pass   http://127.0.0.1;
+    #}
+
+    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+    #
+    location ~ \.php$ {
+        fastcgi_pass fpm_php5.6:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+        fastcgi_read_timeout 600;
+    }
+
+    # deny access to .htaccess files, if Apache's document root
+    # concurs with nginx's one
+    #
+    #location ~ /\.ht {
+    #    deny  all;
+    #}
 }
