--- a/etc_nginx/conf.d/test.conf
+++ b/etc_nginx/conf.d/test.conf
@@ -1,12 +1,25 @@
+upstream leli {
+    server 127.0.0.1:8080;
+}
+
 server {
-    listen       80;
-    server_name  admin.leliapp.com;
-    root /var/www/html/leliapp/leliapp_admin/public;
-    index  index.html index.php;
+    listen 80;
+    server_name admin.leliapp.com;
 
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    location / {
+        proxy_pass http://leli;
+    }
+}
+
+server {
+    listen       8080;
+    server_name  127.0.0.1;
+    root /var/www/html/leliapp/leliapp_admin/public;
+    index  index.html index.php;
 
     error_page  404              /404.html;
     # redirect server error pages to the static page /50x.html
@@ -15,6 +28,7 @@ server {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
+
     location = /404.html {
         root   /usr/share/nginx/html;
     }
