--- a/etc_nginx/conf.d/test.conf
+++ b/etc_nginx/conf.d/test.conf
@@ -3,6 +3,45 @@ upstream leli {
 }
 
 server {
+    listen       80;
+    server_name  127.0.0.1;
+    root /var/www/html/project-manage/public;
+    index  index.html index.php;
+
+    error_page  404              /404.html;
+    # redirect server error pages to the static page /50x.html
+    #
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+
+    location = /404.html {
+        root   /usr/share/nginx/html;
+    }
+
+    location / {
+        # Check if a file or directory index file exists, else route it to index.php.
+        # try_files $uri $uri/ /index.php;
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location ~ ^/index.php$ {
+        fastcgi_pass fpm_php7.2:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+        fastcgi_read_timeout 600;
+    }
+
+    location ~ \.(gif|jpg|png|ico)$ {
+        access_log off;
+    }
+    location ~ /\.ht {
+        deny  all;
+    }
+}
+
+server {
     listen 80;
     server_name admin.leliapp.com;
 
@@ -53,6 +92,9 @@ server {
         deny  all;
     }
 }
+
+
+
 server {
     listen       80;
     server_name  localhost;
