--- a/DockerfilePHP7.1Fpm/Dockerfile
+++ b/DockerfilePHP7.1Fpm/Dockerfile
@@ -1,16 +1,16 @@
-FROM php:5.6.33-fpm
+FROM php:7.1-fpm
 ENV TZ=Asia/Shanghai
 COPY sources.list /etc/apt/sources.list
-COPY composer5.6.phar /usr/local/bin/composer
-RUN apt-get update \
+COPY composer7.1.phar /usr/local/bin/composer
+RUN apt-get update --allow-unauthenticated \
 	# install gd depend lib
-    && apt-get install -y --allow-unauthenticated libwebp-dev libjpeg-dev libpng-dev libfreetype6-dev \
+	&& apt-get install -y --allow-unauthenticated libwebp-dev libjpeg-dev libpng-dev libfreetype6-dev \
 	# configure gd
 	&& docker-php-ext-configure gd --with-webp-dir=/usr/include/webp --with-jpeg-dir=/usr/include --with-png-dir=/usr/include --with-freetype-dir=/usr/include/freetype2 \
 	# install gd
 	&& docker-php-ext-install gd \
 	&& apt-get install -y --allow-unauthenticated vim git curl zip \
 	&& composer config -g repo.packagist composer https://packagist.phpcomposer.com \
-    && docker-php-ext-install pdo pdo_mysql bcmath zip \
-    && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone \
-	&& rm -rf /var/lib/apt/lists/
+	&& docker-php-ext-install pdo pdo_mysql bcmath zip \
+	&& ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone \
+	&& rm -rf /var/lib/apt/lists/*
