--- a/DockerfilePHP7.1Fpm/Dockerfile
+++ b/DockerfilePHP7.1Fpm/Dockerfile
@@ -12,9 +12,13 @@ RUN apt-get update --allow-unauthenticated \
 	&& apt-get install -y --allow-unauthenticated libedit-dev \
 	&& docker-php-ext-install readline \
 	&& apt-get install -y --allow-unauthenticated vim git curl zip \
-	&& curl -sS https://getcomposer.org/installer | php \
-	&& mv composer.phar /usr/local/bin/composer \
-	&& composer config -g repo.packagist composer https://mirrors.aliyun.com/composer/ \
-	&& docker-php-ext-install pdo pdo_mysql bcmath zip opcache calendar mysqli sockets exif \
+	## install php composer
+	## && curl -sS https://getcomposer.org/installer | php \
+	## && mv composer.phar /usr/local/bin/composer \
+	## && composer config -g repo.packagist composer https://mirrors.aliyun.com/composer/ \
+	&& docker-php-ext-install pdo pdo_mysql bcmath zip calendar mysqli sockets exif \
+	## install redis
+	## && pecl install redis \
+	## && echo "extension=redis.so" > /usr/local/etc/php/conf.d/docker-php-ext-redis.ini \
 	&& ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone \
 	&& rm -rf /var/lib/apt/lists/*
