--- a/bak-docker-compose-2022-03-13.yml
+++ b/bak-docker-compose-2022-03-13.yml
@@ -1,13 +1,23 @@
 version: "3"
 services:
-  fpm_php7.4:
+  fpm_php5.6:
     restart: "no"
-    image: php:7.4.latest-fpm
+    image: php:5.6.latest-fpm
+    volumes:
+      - ./php5.6/php5_etc:/usr/local/etc
+      - ./php5.6/no-debug-non-zts-20131226:/usr/local/lib/php/extensions/no-debug-non-zts-20131226
+      - ./sharefolder:/tmp/sharefolder
+      - ./www:/var/www/html
+
+  fpm_php7.1:
+    restart: "no"
+    image: php:7.1.latest-fpm
     volumes:
       # - ./php7.1/php7_etc:/usr/local/etc
       # - ./php7.1/no-debug-non-zts-20160303:/usr/local/lib/php/extensions/no-debug-non-zts-20160303
       - ./sharefolder:/tmp/sharefolder
       - ./www:/var/www/html
+
   mysql5.7:
     image: mysql:5.7.22.latest
     restart: "no"
@@ -16,14 +26,16 @@ services:
     volumes:
       - ./sharefolder:/tmp/sharefolder
       - ./etc_mysql:/etc/mysql
-      # - ./mysql_data:/var/lib/mysql # 当报错的时候，可以把这行删了，这个是做的数据库数据的映射
+      - ./mysql_data:/var/lib/mysql # 当报错的时候，可以把这行删了，这个是做的数据库数据的映射
     ports:
       - 3306:3306
+
   nginx:
-    image: nginx:1.21.6.latest
+    image: nginx:1.13.8.latest
     restart: "no"
     links:
-      - fpm_php7.4:fpm_php7.4
+      - fpm_php5.6:fpm_php5.6
+      - fpm_php7.1:fpm_php7.1
     volumes:
       - ./etc_nginx:/etc/nginx
       - ./sharefolder:/tmp/sharefolder
