--- a/etc_mysql/mysql.conf.d/mysqld.cnf
+++ b/etc_mysql/mysql.conf.d/mysqld.cnf
@@ -26,8 +26,8 @@ datadir		= /var/lib/mysql
 general_log_file = /tmp/sharefolder/mysql/query.log
 general_log      = 1
 log-error	= /tmp/sharefolder/mysql/error.log
-# By default we only accept connections from localhost
-#bind-address	= 127.0.0.1
+# By default we only accept connections from localhost,
+# 0.0.0.0 表示允许任意的IP地址
+bind-address	= 0.0.0.0
 # Disabling symbolic-links is recommended to prevent assorted security risks
 symbolic-links=0
-default-time-zone= +8:00
