--- a/etc_nginx/conf.d/mediawiki_koalaphp_com.conf
+++ b/etc_nginx/conf.d/mediawiki_koalaphp_com.conf
@@ -22,16 +22,20 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location ~ ^/index.php$ {
-        fastcgi_pass fpm_php7.4:9000;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
-        fastcgi_read_timeout 600;
+    location ~ \.php$ {
+            include fastcgi_params;
+            fastcgi_pass fpm_php7.4:9000;
+            fastcgi_index index.php;
+            fastcgi_param PATH_INFO       $fastcgi_path_info;
+            fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+    location ~ .*.(gif|jpg|jpeg|png|bmp|swf|js|css)$
+    {
+            expires 2d;
+            access_log off;
     }
 
-    location ~ \.(gif|jpg|png|ico)$ {
-        access_log off;
-    }
     location ~ /\.ht {
         deny  all;
     }
